Fix Java 25 access issue by adding --add-opens flag